esperando o mysql subir com o dockerize

--- a/desafio-nginx-node/docker-compose.yml
+++ b/desafio-nginx-node/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     volumes:
       - ./node:/usr/src/app
     command: bash -c "npm i && node index.js"
+    entrypoint: dockerize --wait tcp://db:3306 timeout 20s docker-entrypoint.sh
     networks:
       - fc-docker-network
     depends_on:
